Making build work with JDK9