@@ -294,23 +294,6 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
-                    <inherited>true</inherited>
-                    <configuration>
-                        <reportFormat>brief</reportFormat>
-                        <useFile>false</useFile>
-                        <childDelegation>false</childDelegation>
-                        <includes>
-                            <include>**/*Test.java</include>
-                        </includes>
-                        <systemPropertyVariables>
-                            <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
-                        </systemPropertyVariables>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.4</version>
                     <executions>
@@ -373,10 +356,57 @@
                                 </additionalJOptions>
                             </configuration>
                         </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.19.1</version>
+                            <configuration>
+                                <reportFormat>brief</reportFormat>
+                                <useFile>false</useFile>
+                                <childDelegation>false</childDelegation>
+                                <includes>
+                                    <include>**/*Test.java</include>
+                                </includes>
+                                <argLine>-Xmx2000m</argLine>
+                                <systemPropertyVariables>
+                                    <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
+                                </systemPropertyVariables>
+                            </configuration>
+                        </plugin>
                     </plugins>
                 </pluginManagement>
             </build>
          </profile>
+         <profile>
+            <id>jdk19</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.19.1</version>
+                            <configuration>
+                                <reportFormat>brief</reportFormat>
+                                <useFile>false</useFile>
+                                <childDelegation>false</childDelegation>
+                                <includes>
+                                    <include>**/*Test.java</include>
+                                </includes>
+                                <argLine>-Xmx2000m --add-modules java.xml.bind --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+                                <systemPropertyVariables>
+                                    <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
+                                </systemPropertyVariables>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+			</build>
+		</profile>
+
          <profile>
             <id>ibm</id>
             <activation>
